--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
    
 }
 body {
-    background-image: url(/compt2.jpg);
+    background-image: url(./compt2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: scroll;
