--- a/style.css
+++ b/style.css
@@ -62,5 +62,10 @@ button {
     background: #000;
     color: #fff;
     box-shadow: 6px 6px 6px 4px#272626;
-    
+    transition: all 1s;
+}
+button:hover {
+    padding: .6rem 2rem;
+    border-radius: .5rem 0 2rem 0;
+    margin: 0.3rem 0;
 }
